--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -24,6 +24,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="Logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +42,7 @@
             android:background="#11000000"
             android:drawableLeft="@drawable/ic_action_person"
             android:ems="10"
-            android:hint="Username"
+            android:hint="@string/username"
             android:inputType="textPersonName"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black"
@@ -62,7 +63,7 @@
             android:background="#11000000"
             android:drawableLeft="@drawable/ic_action_phone"
             android:ems="10"
-            android:hint="Phone Number"
+            android:hint="@string/phone_number"
             android:inputType="textPersonName"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black"
@@ -83,7 +84,7 @@
             android:background="#11000000"
             android:drawableLeft="@drawable/ic_action_mail"
             android:ems="10"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textPersonName"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black"
@@ -104,7 +105,7 @@
             android:background="#11000000"
             android:drawableLeft="@drawable/ic_action_user2"
             android:ems="10"
-            android:hint="Name"
+            android:hint="@string/name"
             android:inputType="textPersonName"
             android:textColor="@android:color/black"
             android:textColorHint="@android:color/black"
@@ -125,7 +126,7 @@
             android:background="#11000000"
             android:drawableLeft="@drawable/ic_action_pwd"
             android:ems="10"
-            android:hint="Re-Enter Password"
+            android:hint="@string/password2"
             android:inputType="textPassword"
             android:textColorHint="@android:color/black"
             android:textSize="20dp"
@@ -145,7 +146,7 @@
             android:background="#11000000"
             android:drawableLeft="@drawable/ic_action_pwd"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword"
             android:textColorHint="@android:color/black"
             android:textSize="20dp"
@@ -163,7 +164,8 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/mybutton"
-            android:text="REGISTER"
+            android:text="@string/register"
+            android:onClick="signup"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -177,7 +179,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
-            android:text="USER REGISTRATION"
+            android:text="@string/user_registration"
             android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
